--- a/package.json
+++ b/package.json
@@ -10,16 +10,17 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "js-cookie": "^3.0.1",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "4.9.4",
-    "typescript-cookie": "^1.0.4"
+    "typescript": "4.9.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
