--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "bcrypt": "^5.1.0",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "js-cookie": "^3.0.1",
+    "mongoose": "^6.8.1",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,6 +26,7 @@
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
