--- a/package.json
+++ b/package.json
@@ -10,23 +10,35 @@
   },
   "dependencies": {
     "@next/font": "13.0.7",
+    "@typegoose/typegoose": "^10.0.0",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
-    "bcrypt": "^5.1.0",
+    "bcryptjs": "^2.4.3",
+    "config": "^3.3.8",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
+    "express": "^4.18.2",
     "js-cookie": "^3.0.1",
+    "lodash": "^4.17.21",
     "mongoose": "^6.8.1",
     "next": "13.0.7",
+    "next-auth": "^4.18.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
-    "typescript": "4.9.4"
+    "redis": "^4.5.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "4.9.4",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
