--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -27,8 +27,6 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
-    env:
-      MONGODB_URI: ${{ secrets.MONGODB_URI }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
@@ -82,6 +80,14 @@ jobs:
         uses: actions/upload-pages-artifact@v1
         with:
           path: ./out
+
+  create-envfile:
+    runs-on: ubuntu-latest
+    steps:
+    - name: Make envfile
+      uses: actions/create-envfile@v1.3
+      with:
+        MONGODB_URI: ${{ secrets.MONGODB_URI }}
 
   # Deployment job
   deploy:
