--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
     "@next/font": "13.0.7",
     "@typegoose/typegoose": "^10.0.0",
     "@types/js-cookie": "^3.0.2",
