--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "8.30.0",
     "eslint-config-next": "13.0.7",
     "express": "^4.18.2",
+    "framer-motion": "^8.0.1",
     "js-cookie": "^3.0.1",
     "lodash": "^4.17.21",
     "mongoose": "^6.8.1",
