--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/node": "18.11.17",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "axios": "^1.2.1",
     "bcryptjs": "^2.4.3",
     "config": "^3.3.8",
     "cookie-parser": "^1.4.6",
