--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
+    "react-hot-toast": "^2.4.0",
     "redis": "^4.5.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "4.9.4",
