--- a/package.json
+++ b/package.json
@@ -9,11 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.2.1",
-    "@fortawesome/free-solid-svg-icons": "^6.2.1",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "^1.7.7",
     "@next/font": "13.0.7",
+    "@splidejs/react-splide": "^0.7.12",
+    "@splidejs/splide": "^4.1.4",
     "@typegoose/typegoose": "^10.0.0",
     "@types/js-cookie": "^3.0.2",
     "@types/node": "18.11.17",
@@ -34,7 +33,6 @@
     "mongoose": "^6.8.1",
     "next": "13.0.7",
     "next-auth": "^4.18.6",
-    "nuka-carousel": "^5.4.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
