--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongoose": "^6.8.1",
     "next": "13.0.7",
     "next-auth": "^4.18.6",
+    "next-pwa": "^5.6.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.41.0",
